--- a/.config/dmscripts/config
+++ b/.config/dmscripts/config
@@ -81,6 +81,7 @@ confedit_list[dwmblocks]="$HOME/dwmblocks-distrotube/blocks.def.h"
 confedit_list[fish]="$HOME/.config/fish/config.fish"
 confedit_list[herbstluftwm]="$HOME/.config/herbstluftwm/autostart"
 confedit_list[i3]="$HOME/.config/i3/config"
+confedit_list[kitty]="$HOME/.config/kitty/kitty.conf"
 confedit_list[ncmpcpp]="$HOME/.config/ncmpcpp/config"
 confedit_list[neovim]="$HOME/.config/nvim/init.vim"
 confedit_list[picom]="$HOME/.config/picom/picom.conf"
