--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -867,7 +867,8 @@ key_bindings:
   - { key: Paste,     mods: None,          action: Paste                       }
   - { key: Copy,      mods: None,          action: Copy                        }
   - { key: L,         mods: Control,       action: ClearLogNotice              }
-  - { key: L,         mods: Control,       chars: "\x0c"                       }
+# - { key: L,         mods: Control,       chars: "\x0c"                       }
+  - { key: L,         mods: Control,       chars: "clear \x0D"                 }
   - { key: PageUp,    mods: None,          action: ScrollPageUp,   mode: ~Alt  }
   - { key: PageDown,  mods: None,          action: ScrollPageDown, mode: ~Alt  }
   - { key: Home,      mods: Shift,         action: ScrollToTop,    mode: ~Alt  }
