--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -113,10 +113,10 @@ volume-max=250
 #cache-secs=50.0
 
 # Display English subtitles if available.
-#slang=en
+slang=en,eng,spa
 
 # Play Finnish audio if available, fall back to English otherwise.
-#alang=fi,en
+alang=jp,jap,en,eng
 
 # Change subtitle encoding. For Arabic subtitles use 'cp1256'.
 # If the file seems to be valid UTF-8, prefer UTF-8.
