--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -505,35 +505,35 @@ schemes:
   SolarizedLight: &SolarizedLight
     # Default colors
     primary:
-      background: '#fdf6e3' # base3
-      foreground: '#657b83' # base00
+      background: '#282a36' # base3
+      foreground: '#f8f8f2' # base00
 
     # Cursor colors
     cursor:
-      text:   '#fdf6e3' # base3
-      cursor: '#657b83' # base00
+      text:   '#282a36' # base3
+      cursor: '#f8f8f2' # base00
 
     # Normal colors
     normal:
-      black:   '#073642' # base02
-      red:     '#dc322f' # red
-      green:   '#859900' # green
-      yellow:  '#b58900' # yellow
-      blue:    '#268bd2' # blue
-      magenta: '#d33682' # magenta
-      cyan:    '#2aa198' # cyan
-      white:   '#eee8d5' # base2
+      black:   '#21222c' # base02
+      red:     '#ff5555' # red
+      green:   '#50fa7b' # green
+      yellow:  '#f1fa8c' # yellow
+      blue:    '#bd93f9' # blue
+      magenta: '#ff79c6' # magenta
+      cyan:    '#8be9fd' # cyan
+      white:   '#f8f8f2' # base2
 
     # Bright colors
     bright:
-      black:   '#002b36' # base03
-      red:     '#cb4b16' # orange
-      green:   '#586e75' # base01
-      yellow:  '#657b83' # base00
-      blue:    '#839496' # base0
-      magenta: '#6c71c4' # violet
-      cyan:    '#93a1a1' # base1
-      white:   '#fdf6e3' # base3
+      black:   '#6272a4' # base03
+      red:     '#ff6e6e' # orange
+      green:   '#69ff94' # base01
+      yellow:  '#ffffa5' # base00
+      blue:    '#d6acff' # base0
+      magenta: '#ff92df' # violet
+      cyan:    '#a4ffff' # base1
+      white:   '#ffffff' # base3
 
   ### Tomorrow Night ###
   TomorrowNight: &TomorrowNight
