--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -200,7 +200,7 @@ cursor_text_color #111111
 #: special keyword: background. Note that if cursor is set to none
 #: then this setting is ignored.
 
-cursor_shape block
+cursor_shape beam
 
 #: The cursor shape can be one of (block, beam, underline). Note that
 #: when reloading the config this will be changed only if the cursor
@@ -658,7 +658,7 @@ initial_window_height 400
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-enabled_layouts *
+enabled_layouts Tall,Horizontal,Grid,Fat
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -1106,7 +1106,7 @@ mark3_background #f274bc
 
 #: Advanced {{{
 
-shell .
+shell fish
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
@@ -1136,7 +1136,7 @@ close_on_child_death no
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-allow_remote_control no
+allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
@@ -1452,13 +1452,13 @@ linux_display_server auto
 #: The full list of actions that can be mapped to key presses is
 #: available here </actions>.
 
-kitty_mod ctrl+shift
+kitty_mod ctrl
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
 #: modifiers for all the default shortcuts.
 
-clear_all_shortcuts no
+clear_all_shortcuts yes
 
 #: You can have kitty remove all shortcut definitions seen up to this
 #: point. Useful, for instance, to remove the default shortcuts.
@@ -1495,7 +1495,7 @@ kitten_alias
 
 #: Copy to clipboard
 
-map kitty_mod+c copy_to_clipboard
+map kitty_mod+c copy_or_interrupt
 
 #::  There is also a copy_or_interrupt action that can be optionally
 #::  mapped to Ctrl+c. It will copy only if there is a selection and
@@ -1505,11 +1505,11 @@ map kitty_mod+c copy_to_clipboard
 
 #: Paste from clipboard
 
-map kitty_mod+v paste_from_clipboard
+map kitty_mod+shift+v paste_from_clipboard
 
 #: Paste from selection
 
-map kitty_mod+s  paste_from_selection
+#:: map kitty_mod+s  paste_from_selection
 map shift+insert paste_from_selection
 
 #: Pass selection to program
@@ -1670,11 +1670,11 @@ map shift+cmd+d close_window
 
 #: Next window
 
-map kitty_mod+] next_window
+map kitty_mod+tab next_window
 
 #: Previous window
 
-map kitty_mod+[ previous_window
+map kitty_mod+shift+tab previous_window
 
 #: Move window forward
 
@@ -1690,7 +1690,7 @@ map kitty_mod+` move_window_to_top
 
 #: Start resizing window
 
-map kitty_mod+r start_resizing_window
+map kitty_mod+shift+r start_resizing_window
 map cmd+r       start_resizing_window
 
 #: First window
@@ -1758,13 +1758,13 @@ map kitty_mod+f8 swap_with_window
 
 map kitty_mod+right next_tab
 map shift+cmd+]     next_tab
-map ctrl+tab        next_tab
+#:: map ctrl+tab        next_tab
 
 #: Previous tab
 
 map kitty_mod+left previous_tab
 map shift+cmd+[    previous_tab
-map ctrl+shift+tab previous_tab
+#:: map ctrl+shift+tab previous_tab
 
 #: New tab
 
@@ -1813,7 +1813,7 @@ map shift+cmd+i     set_tab_title
 
 #: Next layout
 
-map kitty_mod+l next_layout
+map kitty_mod+shift+l next_layout
 
 
 #: You can also create shortcuts to switch to specific layouts::
@@ -1829,7 +1829,6 @@ map kitty_mod+l next_layout
 #: layout or back to the previous layout if in the named layout.
 #: Useful to temporarily "zoom" the active window by switching to the
 #: stack layout::
-
 #:     map ctrl+alt+z toggle_layout stack
 #: }}}
 
@@ -1942,7 +1941,7 @@ map kitty_mod+p>y kitten hints --type hyperlink
 #: Toggle fullscreen
 
 map kitty_mod+f11 toggle_fullscreen
-map ctrl+cmd+f    toggle_fullscreen
+#:: map ctrl+cmd+f    toggle_fullscreen
 
 #: Toggle maximized
 
@@ -1955,7 +1954,7 @@ map opt+cmd+s toggle_macos_secure_keyboard_entry
 #: Unicode input
 
 map kitty_mod+u    kitten unicode_input
-map ctrl+cmd+space kitten unicode_input
+#:: map ctrl+cmd+space kitten unicode_input
 
 #: Edit config file
 
@@ -2028,7 +2027,7 @@ map cmd+k clear_terminal to_cursor active
 #: Reload kitty.conf
 
 map kitty_mod+f5 load_config_file
-map ctrl+cmd+,   load_config_file
+#:: map ctrl+cmd+,   load_config_file
 
 #::  Reload kitty.conf, applying any changes since the last time it
 #::  was loaded. Note that a handful of settings cannot be dynamically
@@ -2056,7 +2055,7 @@ map opt+cmd+,    debug_config
 #::  client program when pressing specified shortcut keys. For
 #::  example::
 
-#::      map ctrl+alt+a send_text all Special text
+      map kitty_mod+l send_text all clear \x0D
 
 #::  This will send "Special text" when you press the ctrl+alt+a key
 #::  combination.  The text to be sent is a python string literal so
