--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -183,7 +183,6 @@ box_drawing_scale 0.001, 1, 1.5, 2
 
 #: Cursor customization {{{
 
-cursor #528bff
 
 #: Default cursor color. If set to the special value none the cursor
 #: will be rendered with a "reverse video" effect. It's color will be
@@ -193,7 +192,6 @@ cursor #528bff
 #: precedence. Also, the cursor colors are modified if the cell
 #: background and foreground colors have very low contrast.
 
-cursor_text_color #111111
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
@@ -312,7 +310,6 @@ mouse_hide_wait 3.0
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
 
-url_color #0087bd
 url_style curly
 
 #: The color and style for highlighting URLs on mouse-over. url_style
@@ -722,16 +719,13 @@ placement_strategy center
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
 
-active_border_color #e1acff
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-inactive_border_color #1d2330
 
 #: The color for the border of inactive windows
 
-bell_border_color #ff5a00
 
 #: The color for the border of inactive windows in which a bell has
 #: occurred
@@ -935,11 +929,7 @@ active_tab_title_template none
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
 
-active_tab_foreground   #000
-active_tab_background   #eee
 active_tab_font_style   bold-italic
-inactive_tab_foreground #444
-inactive_tab_background #999
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles
@@ -958,12 +948,10 @@ tab_bar_margin_color none
 
 #: Color scheme {{{
 
-foreground #bbc2cf
-background #282c34
 
 #: The foreground and background colors
 
-background_opacity 0.8
+background_opacity 0.9
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -1014,13 +1002,11 @@ background_tint 0.0
 #: background_opacity is set and transparent windows are supported or
 #: background_image is set.
 
-dim_opacity 0.75
+dim_opacity 0.85
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-selection_foreground #000000
-selection_background #3e4451
 
 #: The foreground and background colors for text selected with the
 #: mouse. Setting both of these to none will cause a "reverse video"
@@ -1036,45 +1022,76 @@ selection_background #3e4451
 #: dull and bright version, for the first 16 colors. You can set the
 #: remaining 240 colors as color16 to color255.
 
-color0 #1c1f24
-color8 #5b6268
+#: DoomOne
+# selection_foreground #bbc2cf
+# selection_background #3e4451
 
-#: black
+# foreground #bbc2cf
+# background #282c34
 
+# cursor #528bff
+# cursor_text_color #111111
+
+# color0 #1c1f24
+# color1 #ff6c6b
+# color2  #98be65
+# color3  #da8548
+# color4  #51afef
+# color5  #c678dd
+# color6  #5699af
+# color7  #202328
+# color8 #5b6268
+# color9 #da8548
+# color10 #4db5bd
+# color11 #ecbe7b
+# color12 #3071db
+# color13 #a9a1e1
+# color14 #46d9ff
+# color15 #dfdfdf
+
+# url_color #0087bd
+# inactive_border_color #1d2330
+# active_border_color #e1acff
+# bell_border_color #ff5a00
+
+# inactive_tab_foreground #444
+# inactive_tab_background #999
+# active_tab_foreground   #000
+# active_tab_background   #eee
+
+#:DoomOne v2
+foreground #bbc2cf
+background #282c34
+color0 #282c34
 color1 #ff6c6b
-color9 #da8548
-
-#: red
-
-color2  #98be65
-color10 #4db5bd
-
-#: green
-
-color3  #da8548
-color11 #ecbe7b
-
-#: yellow
-
-color4  #51afef
-color12 #3071db
-
-#: blue
-
-color5  #c678dd
+color2 #98be65
+color3 #ecbe7b
+color4 #51afef
+color5 #a9a1e1
+color6 #46d9ff
+color7 #bbc2cf
+color8 #3f444a
+color9 #ff6c6b
+color10 #98be65
+color11 #da8548
+color12 #51afef
 color13 #a9a1e1
-
-#: magenta
-
-color6  #5699af
 color14 #46d9ff
+color15 #efefef
+cursor #51afef
+cursor_text_color #282c34
+url_color #98be65
+selection_foreground none
+selection_background #2257a0
+tab_bar_background #16181c
+active_tab_foreground #bbc2cf
+active_tab_background #282c34
+inactive_tab_foreground #5b6268
+inactive_tab_background #1e2127
+active_border_color #51afef
+inactive_border_color #3f444a
+bell_border_color #ecbe7b
 
-#: cyan
-
-color7  #202328
-color15 #dfdfdf
-
-#: white
 
 mark1_foreground black
 
@@ -1339,7 +1356,7 @@ macos_window_resizable yes
 #: resizable on macOS. Changing this setting by reloading the config
 #: will only affect newly created windows.
 
-macos_thicken_font 0
+macos_thicken_font 1
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes. For example, a value of
@@ -1514,7 +1531,7 @@ map shift+insert paste_from_selection
 
 #: Pass selection to program
 
-map kitty_mod+o pass_selection_to_program
+# map kitty_mod+o pass_selection_to_program
 
 #::  You can also pass the contents of the current selection to any
 #::  program using pass_selection_to_program. By default, the system's
@@ -1535,37 +1552,37 @@ map kitty_mod+o pass_selection_to_program
 
 #: Scroll line up
 
-map kitty_mod+up    scroll_line_up
-map kitty_mod+k     scroll_line_up
-map opt+cmd+page_up scroll_line_up
-map cmd+up          scroll_line_up
+# map kitty_mod+up    scroll_line_up
+# map kitty_mod+k     scroll_line_up
+# map opt+cmd+page_up scroll_line_up
+# map cmd+up          scroll_line_up
 
 #: Scroll line down
 
-map kitty_mod+down    scroll_line_down
-map kitty_mod+j       scroll_line_down
-map opt+cmd+page_down scroll_line_down
-map cmd+down          scroll_line_down
+# map kitty_mod+down    scroll_line_down
+# map kitty_mod+j       scroll_line_down
+# map opt+cmd+page_down scroll_line_down
+# map cmd+down          scroll_line_down
 
 #: Scroll page up
 
 map kitty_mod+page_up scroll_page_up
-map cmd+page_up       scroll_page_up
+# map cmd+page_up       scroll_page_up
 
 #: Scroll page down
 
 map kitty_mod+page_down scroll_page_down
-map cmd+page_down       scroll_page_down
+# map cmd+page_down       scroll_page_down
 
 #: Scroll to top
 
 map kitty_mod+home scroll_home
-map cmd+home       scroll_home
+# map cmd+home       scroll_home
 
 #: Scroll to bottom
 
 map kitty_mod+end scroll_end
-map cmd+end       scroll_end
+# map cmd+end       scroll_end
 
 #: Scroll to previous shell prompt
 
@@ -1581,7 +1598,7 @@ map kitty_mod+x scroll_to_prompt 1
 
 #: Browse scrollback buffer in pager
 
-map kitty_mod+h show_scrollback
+# map kitty_mod+h show_scrollback
 
 #::  You can pipe the contents of the current screen + history buffer
 #::  as STDIN to an arbitrary program using the ``launch`` function.
@@ -1595,7 +1612,7 @@ map kitty_mod+h show_scrollback
 
 #: Browse output of the last shell command in pager
 
-map kitty_mod+g show_last_command_output
+# map kitty_mod+g show_last_command_output
 
 #::  You can also define additional shortcuts to get the command
 #::  output. For example, to get the first command output on screen::
@@ -1627,7 +1644,7 @@ map kitty_mod+g show_last_command_output
 #: New window
 
 map kitty_mod+enter new_window
-map cmd+enter       new_window
+# map cmd+enter       new_window
 
 #::  You can open a new window running an arbitrary program, for
 #::  example::
@@ -1656,8 +1673,8 @@ map cmd+enter       new_window
 
 #: New OS window
 
-map kitty_mod+n new_os_window
-map cmd+n       new_os_window
+# map kitty_mod+n new_os_window
+# map cmd+n       new_os_window
 
 #::  Works like new_window above, except that it opens a top level OS
 #::  kitty window. In particular you can use new_os_window_with_cwd to
@@ -1666,7 +1683,7 @@ map cmd+n       new_os_window
 #: Close window
 
 map kitty_mod+w close_window
-map shift+cmd+d close_window
+# map shift+cmd+d close_window
 
 #: Next window
 
@@ -1678,65 +1695,65 @@ map kitty_mod+shift+tab previous_window
 
 #: Move window forward
 
-map kitty_mod+f move_window_forward
+# map kitty_mod+f move_window_forward
 
 #: Move window backward
 
-map kitty_mod+b move_window_backward
+# map kitty_mod+b move_window_backward
 
 #: Move window to top
 
-map kitty_mod+` move_window_to_top
+# map kitty_mod+` move_window_to_top
 
 #: Start resizing window
 
-map kitty_mod+shift+r start_resizing_window
-map cmd+r       start_resizing_window
+# map kitty_mod+shift+r start_resizing_window
+# map cmd+r       start_resizing_window
 
 #: First window
 
 map kitty_mod+1 first_window
-map cmd+1       first_window
+# map cmd+1       first_window
 
 #: Second window
 
 map kitty_mod+2 second_window
-map cmd+2       second_window
+# map cmd+2       second_window
 
 #: Third window
 
 map kitty_mod+3 third_window
-map cmd+3       third_window
+# map cmd+3       third_window
 
 #: Fourth window
 
 map kitty_mod+4 fourth_window
-map cmd+4       fourth_window
+# map cmd+4       fourth_window
 
 #: Fifth window
 
 map kitty_mod+5 fifth_window
-map cmd+5       fifth_window
+# map cmd+5       fifth_window
 
 #: Sixth window
 
 map kitty_mod+6 sixth_window
-map cmd+6       sixth_window
+# map cmd+6       sixth_window
 
 #: Seventh window
 
 map kitty_mod+7 seventh_window
-map cmd+7       seventh_window
+# map cmd+7       seventh_window
 
 #: Eight window
 
 map kitty_mod+8 eighth_window
-map cmd+8       eighth_window
+# map cmd+8       eighth_window
 
 #: Ninth window
 
 map kitty_mod+9 ninth_window
-map cmd+9       ninth_window
+# map cmd+9       ninth_window
 
 #: Tenth window
 
@@ -1744,7 +1761,7 @@ map kitty_mod+0 tenth_window
 
 #: Visually select focus window
 
-map kitty_mod+f7 focus_visible_window
+# map kitty_mod+f7 focus_visible_window
 
 #: Visually swap window with another
 
@@ -1756,42 +1773,42 @@ map kitty_mod+f8 swap_with_window
 
 #: Next tab
 
-map kitty_mod+right next_tab
-map shift+cmd+]     next_tab
+# map kitty_mod+right next_tab
+# map shift+cmd+]     next_tab
 #:: map ctrl+tab        next_tab
 
 #: Previous tab
 
-map kitty_mod+left previous_tab
-map shift+cmd+[    previous_tab
+# map kitty_mod+left previous_tab
+# map shift+cmd+[    previous_tab
 #:: map ctrl+shift+tab previous_tab
 
 #: New tab
 
-map kitty_mod+t new_tab
-map cmd+t       new_tab
+# map kitty_mod+t new_tab
+# map cmd+t       new_tab
 
 #: Close tab
 
-map kitty_mod+q close_tab
-map cmd+w       close_tab
+# map kitty_mod+q close_tab
+# map cmd+w       close_tab
 
 #: Close OS window
 
-map shift+cmd+w close_os_window
+# map shift+cmd+w close_os_window
 
 #: Move tab forward
 
-map kitty_mod+. move_tab_forward
+# map kitty_mod+. move_tab_forward
 
 #: Move tab backward
 
-map kitty_mod+, move_tab_backward
+# map kitty_mod+, move_tab_backward
 
 #: Set tab title
 
-map kitty_mod+alt+t set_tab_title
-map shift+cmd+i     set_tab_title
+# map kitty_mod+alt+t set_tab_title
+# map shift+cmd+i     set_tab_title
 
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
@@ -1842,21 +1859,21 @@ map kitty_mod+shift+l next_layout
 map kitty_mod+equal  change_font_size all +2.0
 map kitty_mod+plus   change_font_size all +2.0
 map kitty_mod+kp_add change_font_size all +2.0
-map cmd+plus         change_font_size all +2.0
-map cmd+equal        change_font_size all +2.0
-map shift+cmd+equal  change_font_size all +2.0
+# map cmd+plus         change_font_size all +2.0
+# map cmd+equal        change_font_size all +2.0
+# map shift+cmd+equal  change_font_size all +2.0
 
 #: Decrease font size
 
 map kitty_mod+minus       change_font_size all -2.0
 map kitty_mod+kp_subtract change_font_size all -2.0
-map cmd+minus             change_font_size all -2.0
-map shift+cmd+minus       change_font_size all -2.0
+# map cmd+minus             change_font_size all -2.0
+# map shift+cmd+minus       change_font_size all -2.0
 
 #: Reset font size
 
 map kitty_mod+backspace change_font_size all 0
-map cmd+0               change_font_size all 0
+# map cmd+0               change_font_size all 0
 
 
 #: To setup shortcuts for specific font sizes::
@@ -1877,7 +1894,7 @@ map cmd+0               change_font_size all 0
 
 #: Open URL
 
-map kitty_mod+e open_url_with_hints
+map kitty_mod+shift+e open_url_with_hints
 
 #::  Open a currently visible URL using the keyboard. The program used
 #::  to open the URL is specified in open_url_with.
@@ -1940,54 +1957,54 @@ map kitty_mod+p>y kitten hints --type hyperlink
 
 #: Toggle fullscreen
 
-map kitty_mod+f11 toggle_fullscreen
+# map kitty_mod+f11 toggle_fullscreen
 #:: map ctrl+cmd+f    toggle_fullscreen
 
 #: Toggle maximized
 
-map kitty_mod+f10 toggle_maximized
+# map kitty_mod+f10 toggle_maximized
 
 #: Toggle macOS secure keyboard entry
 
-map opt+cmd+s toggle_macos_secure_keyboard_entry
+# map opt+cmd+s toggle_macos_secure_keyboard_entry
 
 #: Unicode input
 
-map kitty_mod+u    kitten unicode_input
-#:: map ctrl+cmd+space kitten unicode_input
+map kitty_mod+shift+u    kitten unicode_input
+# :: map ctrl+cmd+space kitten unicode_input
 
-#: Edit config file
+# : Edit config file
 
-map kitty_mod+f2 edit_config_file
-map cmd+,        edit_config_file
+# map kitty_mod+f2 edit_config_file
+# map cmd+,        edit_config_file
 
 #: Open the kitty command shell
 
-map kitty_mod+escape kitty_shell window
+# map kitty_mod+escape kitty_shell window
 
 #::  Open the kitty shell in a new window/tab/overlay/os_window to
 #::  control kitty using commands.
 
 #: Increase background opacity
 
-map kitty_mod+a>m set_background_opacity +0.1
+# map kitty_mod+a>m set_background_opacity +0.1
 
 #: Decrease background opacity
 
-map kitty_mod+a>l set_background_opacity -0.1
+# map kitty_mod+a>l set_background_opacity -0.1
 
 #: Make background fully opaque
 
-map kitty_mod+a>1 set_background_opacity 1
+# map kitty_mod+a>1 set_background_opacity 1
 
 #: Reset background opacity
 
-map kitty_mod+a>d set_background_opacity default
+# map kitty_mod+a>d set_background_opacity default
 
 #: Reset the terminal
 
 map kitty_mod+delete clear_terminal reset active
-map opt+cmd+r        clear_terminal reset active
+# map opt+cmd+r        clear_terminal reset active
 
 #::  You can create shortcuts to clear/reset the terminal. For
 #::  example::
@@ -2022,7 +2039,7 @@ map opt+cmd+r        clear_terminal reset active
 
 #: Clear up to cursor line
 
-map cmd+k clear_terminal to_cursor active
+# map cmd+k clear_terminal to_cursor active
 
 #: Reload kitty.conf
 
@@ -2042,7 +2059,7 @@ map kitty_mod+f5 load_config_file
 #: Debug kitty configuration
 
 map kitty_mod+f6 debug_config
-map opt+cmd+,    debug_config
+# map opt+cmd+,    debug_config
 
 #::  Show details about exactly what configuration kitty is running
 #::  with and its host environment. Useful for debugging issues.
