--- a/.config/dmscripts/config
+++ b/.config/dmscripts/config
@@ -14,7 +14,7 @@ DMENU="dmenu -i -l 20 -p"
 DMBROWSER="vivaldi-stable"
 # DMBROWSER="qutebrowser"
 
-DMTERM="alacritty -e"
+DMTERM="kitty"
 # DMTERM="alacritty -e"
 
 DMEDITOR="emacsclient -c -a emacs"
@@ -51,7 +51,7 @@ esac
 # IE a pictures directory, an audio directory, config locations, etc
 
 # dm-setbg
-setbg_dir="/usr/share/backgrounds"
+setbg_dir="/${HOME}/.themes/wallpapers"
 # Set this to 1 if you want to use imv and wayland, 0 if you want to use sxiv
 # Note that sxiv is X11 only, you need to mark the image you want to use.
 use_imv=1 
@@ -67,42 +67,27 @@ note_dir="${HOME}/.config/dmscripts/dmnote"
 declare -A confedit_list
 confedit_list[confedit]="$HOME/.config/dmscripts/config"
 confedit_list[alacritty]="$HOME/.config/alacritty/alacritty.yml"
-confedit_list[awesome]="$HOME/.config/awesome/rc.lua"
 confedit_list[bash]="$HOME/.bashrc"
 confedit_list[broot]="$HOME/.config/broot/conf.toml"
-confedit_list[bspwm]="$HOME/.config/bspwm/bspwmrc"
 confedit_list[doom emacs config.el]="$HOME/.config/doom/config.el"
 confedit_list[doom emacs config.org]="$HOME/.config/doom/config.org"
 confedit_list[doom emacs init.el]="$HOME/.config/doom/init.el"
 confedit_list[doom emacs packages.el]="$HOME/.config/doom/packages.el"
 confedit_list[dunst]="$HOME/.config/dunst/dunstrc"
-confedit_list[dwm]="$HOME/dwm-distrotube/config.def.h"
-confedit_list[dwmblocks]="$HOME/dwmblocks-distrotube/blocks.def.h"
 confedit_list[fish]="$HOME/.config/fish/config.fish"
 confedit_list[herbstluftwm]="$HOME/.config/herbstluftwm/autostart"
-confedit_list[i3]="$HOME/.config/i3/config"
 confedit_list[kitty]="$HOME/.config/kitty/kitty.conf"
+confedit_list[lf]="$HOME/.config/lf/lfrc"
 confedit_list[ncmpcpp]="$HOME/.config/ncmpcpp/config"
 confedit_list[neovim]="$HOME/.config/nvim/init.vim"
 confedit_list[picom]="$HOME/.config/picom/picom.conf"
-confedit_list[polybar]="$HOME/.config/polybar/config"
 confedit_list[qtile]="$HOME/.config/qtile/README.org"
-confedit_list[qutebrowser bookmarks]="$HOME/.config/qutebrowser/bookmarks/urls"
-confedit_list[qutebrowser quickmarks]="$HOME/.config/qutebrowser/quickmarks"
-confedit_list[qutebrowser config.py]="$HOME/.config/qutebrowser/config.py"
-confedit_list[spectrwm]="$HOME/.spectrwm.conf"
 confedit_list[ssh]="$HOME/.ssh/config"
 confedit_list[st]="$HOME/st-distrotube/config.def.h"
 confedit_list[stumpwm]="$HOME/.config/stumpwm/config"
-confedit_list[surf]="$HOME/surf-distrotube/config.def.h"
 confedit_list[sxhkd]="$HOME/.config/sxhkd/sxhkdrc"
-confedit_list[tabbed]="$HOME/tabbed-distrotube/config.def.h"
 confedit_list[vifm]="$HOME/.config/vifm/vifmrc"
 confedit_list[vim]="$HOME/.vimrc"
-confedit_list[xmobar mon1]="$HOME/.config/xmobar/xmobarrc0"
-confedit_list[xmobar mon2]="$HOME/.config/xmobar/xmobarrc1"
-confedit_list[xmobar mon3]="$HOME/.config/xmobar/xmobarrc2"
-confedit_list[xmonad]="$HOME/.xmonad/README.org"
 confedit_list[xinitrc]="$HOME/.xinitrc"
 confedit_list[xresources]="$HOME/.Xresources"
 confedit_list[zsh]="$HOME/.zshrc"
