--- a/.config/dmscripts/config
+++ b/.config/dmscripts/config
@@ -75,6 +75,7 @@ confedit_list[doom emacs init.el]="$HOME/.config/doom/init.el"
 confedit_list[doom emacs packages.el]="$HOME/.config/doom/packages.el"
 confedit_list[dunst]="$HOME/.config/dunst/dunstrc"
 confedit_list[fish]="$HOME/.config/fish/config.fish"
+confedit_list[foot]="$HOME/.config/foot/foot.ini"
 confedit_list[herbstluftwm]="$HOME/.config/herbstluftwm/autostart"
 confedit_list[kitty]="$HOME/.config/kitty/kitty.conf"
 confedit_list[lf]="$HOME/.config/lf/lfrc"
