--- a/.config/picom/picom-blur.conf
+++ b/.config/picom/picom-blur.conf
@@ -266,6 +266,7 @@ blur-background-exclude = [
   # when taking selection screenshot with `main`
   # https://github.com/naelstrof/maim/issues/130
   "class_g = 'slop'",
+  "class_g = 'kitty'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
