--- a/.config/picom/picom-blur.conf
+++ b/.config/picom/picom-blur.conf
@@ -187,7 +187,7 @@ opacity-rule = [
   "80:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
+  "100:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'"
@@ -267,6 +267,7 @@ blur-background-exclude = [
   # https://github.com/naelstrof/maim/issues/130
   "class_g = 'slop'",
   "class_g = 'kitty'",
+  "class_g = 'telegram-desktop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
