--- a/.config/variety/variety.conf
+++ b/.config/variety/variety.conf
@@ -1,5 +1,5 @@
 # change_on_start = <True or False>
-change_on_start = False
+change_on_start = True
 
 # change_enabled = <True or False>
 change_enabled = True
@@ -45,7 +45,7 @@ fetched_folder = ~/.config/variety/Fetched
 # clipboard_enabled = <True or False>
 # clipboard_use_whitelist = <will we use a hosts whitelist, or we'll fetch from everywhere - True or False>
 # clipboard_hosts = <comma-separated whitelist of hosts for which clipboard fetching is enabled>
-clipboard_enabled = False
+clipboard_enabled = True
 clipboard_use_whitelist = True
 clipboard_hosts = "wallhaven.cc,wallpapers.net,flickr.com,imgur.com,deviantart.com,interfacelift.com,vladstudio.com,imageshack.us,deviantart.net,imageshack.com"
 
@@ -64,7 +64,7 @@ desired_color = 160 160 160
 # min_size_enabled = <True or False>
 # min_size = <Percentage>
 min_size_enabled = True
-min_size = 80
+min_size = 100
 
 # Should we use only landscape-oriented images?
 # use_landscape_enabled = <True or False>
@@ -208,8 +208,9 @@ src7 = True|apod|NASA's Astronomy Picture of the Day
 src8 = True|flickr|user:www.flickr.com/photos/peter-levi/;user_id:93647178@N00;
 src9 = True|earthview|Google Earth View Wallpapers
 src10 = True|natgeo|National Geographic's photo of the day
-src11 = True|desktoppr|Random wallpapers from Desktoppr.co
-src12 = False|earth|World Sunlight Map - live wallpaper from Die.net
+src11 = True|wallhaven|abstract
+src12 = True|desktoppr|Random wallpapers from Desktoppr.co
+src13 = False|earth|World Sunlight Map - live wallpaper from Die.net
 
 # Image filters to apply randomly to every wallpaper (ImageMagick is used for this)
 # Each filter is filterX = <enabled or not|filter name|arguments to pass to ImageMagick when calling convert>
