--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -118,6 +118,7 @@ slang=en,eng,spa
 # Play Finnish audio if available, fall back to English otherwise.
 alang=jp,jap,en,eng
 sub-auto=all
+sub-file-paths=sub:subtitles:subs
 # Change subtitle encoding. For Arabic subtitles use 'cp1256'.
 # If the file seems to be valid UTF-8, prefer UTF-8.
 # (You can add '+' in front of the codepage to force it.)
