--- a/.config/variety/variety.conf
+++ b/.config/variety/variety.conf
@@ -206,7 +206,7 @@ src5 = True|bing|Bing Photo of the Day
 src6 = True|unsplash|High-resolution photos from Unsplash.com
 src7 = True|apod|NASA's Astronomy Picture of the Day
 src8 = True|flickr|user:www.flickr.com/photos/peter-levi/;user_id:93647178@N00;
-src9 = True|earthview|Google Earth View Wallpapers
+src9 = False|earthview|Google Earth View Wallpapers
 src10 = True|natgeo|National Geographic's photo of the day
 src11 = True|wallhaven|abstract
 src12 = True|desktoppr|Random wallpapers from Desktoppr.co
